✨ feat(inventory, guide): Add inventory change events, automatic guide book discovery, and optimize item stack keys